--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="utf-8">
     <title>Adrián Casado</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/header.css">
 </head>
+<header class="horizontal">
+    <div id="menu">
+        <label id="fold-btn-txt" for="fold-btn">
+            <div class="click-me"></div>
+        </label>
+        <input id="fold-btn" type="checkbox">
+        <div id="nav">
+            <ul>
+                <li><a href="./about-me.html">About Me</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
 <body>
-    <p>Hola</p>
 </body>
 </html>
