--- a/about-me.html
+++ b/about-me.html
@@ -17,15 +17,15 @@
             <ul>
                 <li><a href="./index.html" class="mid-text">Main Menu</a></li>
                 <li><a href="./about-me.html" class="mid-text">About Me</a></li>
+                <li><a href="./index.html" class="mid-text">Projects</a></li>
+                <li><a href="./index.html" class="mid-text">Formation</a></li>
             </ul>
         </div>
     </div>
-    <div id="title">
-        <div id="title-name">
-            <h1 id="title-name-txt">Adrián Casado</h1>
-        </div>
-        <div id="title-info">
-            <h3 id="title-info-txt">Web & Applications Developer</h3>
+    <div id="title" class="center">
+        <div id="title-name" class="center vertical">
+            <h1 id="title-name-txt" class="center">Adrián Casado</h1>
+            <h3 id="title-info">Web & Applications Developer</h3>
         </div>
     </div>
 </header>
